@@ -10,4 +10,10 @@ struct keyaccess {
 	sockaddr_u	addr;
 };
 
+extern KeyAccT* keyacc_new_push(KeyAccT *head, const sockaddr_u *addr);
+extern KeyAccT* keyacc_pop_free(KeyAccT *head);
+extern KeyAccT* keyacc_all_free(KeyAccT *head);
+extern int      keyacc_contains(const KeyAccT *head, const sockaddr_u *addr,
+				int res_on_empty_list);
+
 #endif	/* NTP_KEYACC_H */
